--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,10 +39,12 @@
     <link rel="canonical" href="{{ .Permalink }}">
     
     <!-- Set favicons -->
-    <link rel="apple-icon" sizes="180x180" href="/favicon.ico/apple-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico/favicon-16x16.png">
-    <link rel="manifest" href="/favicon.ico/manifest.json">
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <!-- Generate CSS file from SCSS and include -->
     {{ $template := resources.Get "styles.scss" }}
