--- a/layouts/partials/post.html
+++ b/layouts/partials/post.html
@@ -2,6 +2,7 @@
 <article class="post">
 
     {{ partial "post_title.html" . }}
+    {{ partial "reading-time.html" . }}
     {{ .Content | safeHTML }}
 
 </article>
