--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,12 +39,12 @@
     <link rel="canonical" href="{{ .Permalink }}">
     
     <!-- Set favicons -->
-    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "favicon/apple-touch-icon.png" | relURL }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon/favicon-32x32.png" | relURL }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon/favicon-16x16.png" | relURL }}">
+    <link rel="manifest" href="{{ "favicon/site.webmanifest" | relURL }}">
+    <link rel="shortcut icon" href="{{ "favicon/favicon.ico" | relURL }}">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Generate CSS file from SCSS and include -->
     {{ $template := resources.Get "styles.scss" }}
